--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "ngrok Client",
+  "name": "ngrok Client installer (Unoffical)",
   "version": "2.1.10",
   "slug": "ngrok",
-  "description": "A ngrok client for Hass.io",
+  "description": "A unoffical ngrok client installer and configuator for Home Assistant",
   "init": false,
   "webui": "http://[HOST]:[PORT:4040]",
   "url": "https://github.com/pssc/ha-addon-ngrok",
