Match build specs

--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -1,6 +1,6 @@
 {
   "name": "ngrok Client Installer (Unofficial)",
-  "version": "2.1.10",
+  "version": "15.0.5.3.0",
   "slug": "ngrok",
   "description": "A unofficial ngrok client installer and configuator for Home Assistant",
   "init": false,
@@ -10,9 +10,7 @@
   "arch": [
     "aarch64",
     "amd64",
-    "armhf",
-    "armv7",
-    "i386"
+    "armv7"
   ],
   "startup": "system",
   "boot": "auto",
