--- a/ngrok/config.json
+++ b/ngrok/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngrok Client Installer (Unofficial)",
+  "name": "ngrok Client Installer (Unofficial)2",
   "version": "15.0.5.3.0",
   "slug": "ngrok",
   "description": "A unofficial ngrok client installer and configuator for Home Assistant",
